게시글 추가

--- a/content/posts/회고록/2021-01-31---항공편 예약 프로젝트 기획.md
+++ b/content/posts/회고록/2021-01-31---항공편 예약 프로젝트 기획.md
@@ -34,6 +34,12 @@ description: "베이스 캠프 1주차 기획과제 회고록"
 이번 주는 개발사항을 전부 제외하고 기획부분만 하기로 정했는데 어쩔 수 없이 자꾸 개발적인 부분이 머리속에서 떠나가질 않았다.  
 데이터베이스 설계부터, 화면에 들어갈 api통신들까지 나도 모르게 고려하면서 얘기하다보니 결과적으로 더 재밌는 기능들을 넣지 못해 아쉬운 생각이 든다.  
 
+## **다른 팀의 기획발표**
+
+가장 처음 발표를 하고 다른 팀의 발표를 듣게 되었는데 다들 너무 잘한 것 같다.  
+어느 팀은 이미 화면구성(FE) 개발이 끝난 것 같아 보이고 어느 팀은 기능이 어마무시하게 많다.  
+같은 기능에 대해서도 서로 접근하는 방식이 달랐다. 예를들어 좌석 선점의 경우, 우리 팀의 경우는 선점 > 결졔 대기 > 결제의 3가지 단계로 구성했다면 실시간 선점 > 예매의 2단계 또는 최대 4단계까지 깊게 고민한 모습을 볼 수 있었다.  
+
 ## **앞으로의 개발일정**
 
 다음 주는 기획발표 이후 쭉 교육일정이 잡혀있다.  
